Add auth service tests and update existing tests