@@ -8,6 +8,7 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.EnumSource;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
@@ -32,12 +33,23 @@ import java.util.UUID;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.lenient;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoInteractions;
 import static org.mockito.Mockito.verifyNoMoreInteractions;
 import static org.mockito.Mockito.when;
+import static uk.gov.hmcts.reform.pip.model.account.Roles.GENERAL_THIRD_PARTY;
+import static uk.gov.hmcts.reform.pip.model.account.Roles.INTERNAL_ADMIN_CTSC;
+import static uk.gov.hmcts.reform.pip.model.account.Roles.INTERNAL_ADMIN_LOCAL;
+import static uk.gov.hmcts.reform.pip.model.account.Roles.INTERNAL_SUPER_ADMIN_CTSC;
+import static uk.gov.hmcts.reform.pip.model.account.Roles.INTERNAL_SUPER_ADMIN_LOCAL;
+import static uk.gov.hmcts.reform.pip.model.account.Roles.SYSTEM_ADMIN;
+import static uk.gov.hmcts.reform.pip.model.account.Roles.VERIFIED;
+import static uk.gov.hmcts.reform.pip.model.account.Roles.VERIFIED_THIRD_PARTY_ALL;
+import static uk.gov.hmcts.reform.pip.model.account.Roles.VERIFIED_THIRD_PARTY_PRESS;
 
 @ExtendWith(MockitoExtension.class)
 class AuthorisationServiceTest {
@@ -48,7 +60,7 @@ class AuthorisationServiceTest {
     private static final UUID SUBSCRIPTION_ID2 = UUID.randomUUID();
     private static final UUID SUBSCRIPTION_ID3 = UUID.randomUUID();
 
-    private static final String DELETE_ERROR_LOG = "User with ID %s is forbidden to remove user with ID %s";
+    private static final String DELETE_ERROR_LOG = "User with ID %s is not authorised to delete this account";
     private static final String UPDATE_ERROR_LOG = "User with ID %s is forbidden to update user with ID %s";
     private static final String UPDATE_OWN_ACCOUNT_ERROR_LOG =
         "User with ID %s is forbidden to update their own account";
@@ -59,7 +71,6 @@ class AuthorisationServiceTest {
     private static final String CAN_UPDATE_ACCOUNT_MESSAGE = "User should be able to update account";
     private static final String CANNOT_UPDATE_ACCOUNT_MESSAGE = "User should not be able to update account";
 
-    private static final String CAN_CREATE_ACCOUNT_MESSAGE = "User should be able to create account";
     private static final String CANNOT_CREATE_ACCOUNT_MESSAGE = "User should not be able to create account";
 
     private static final String CAN_DELETE_SUBSCRIPTION_MESSAGE = "User should be able to delete subscription";
@@ -74,12 +85,12 @@ class AuthorisationServiceTest {
 
     private static final String UNAUTHORIZED_MESSAGE = "User should not be able to perform action when unauthorised";
 
-    private static PiUser user = new PiUser();
-    private static PiUser adminUser = new PiUser();
+    private static final PiUser user = new PiUser();
+    private static final PiUser adminUser = new PiUser();
 
-    private static Subscription subscription = new Subscription();
-    private static Subscription subscription2 = new Subscription();
-    private static Subscription subscription3 = new Subscription();
+    private static final Subscription subscription = new Subscription();
+    private static final Subscription subscription2 = new Subscription();
+    private static final Subscription subscription3 = new Subscription();
 
     private static final String ADMIN_ROLE = "APPROLE_api.request.admin";
     private static final String UNKNOWN_ROLE = "APPROLE_api.request.unknown";
@@ -96,9 +107,6 @@ class AuthorisationServiceTest {
 
     @Mock
     private SecurityContext securityContext;
-
-    @Mock
-    private Authentication authentication;
 
     @InjectMocks
     private AuthorisationService authorisationService;
@@ -140,26 +148,281 @@ class AuthorisationServiceTest {
 
     @ParameterizedTest
     @EnumSource(Roles.class)
-    void testSystemAdminCanCreateAnyRole(Roles role) {
+    void testUserCanNotDeleteTheirOwnAccount(Roles role) {
         setupWithAuth();
         user.setRoles(role);
-        adminUser.setRoles(Roles.SYSTEM_ADMIN);
 
-        lenient().when(userRepository.findByUserId(ADMIN_USER_ID)).thenReturn(Optional.of(adminUser));
+        when(accountService.getUserById(ADMIN_USER_ID)).thenReturn(user);
 
-        try (LogCaptor logCaptor = LogCaptor.forClass(AuthorisationService.class)) {
-            SoftAssertions softly = new SoftAssertions();
+        assertFalse(authorisationService.userCanDeleteAccount(ADMIN_USER_ID, ADMIN_USER_ID));
+    }
 
-            softly.assertThat(authorisationService.userCanCreateAccount(ADMIN_USER_ID, List.of(user)))
-                .as(CAN_CREATE_ACCOUNT_MESSAGE)
-                .isTrue();
+    @ParameterizedTest
+    @EnumSource(value = Roles.class, names = { "SYSTEM_ADMIN" }, mode = EnumSource.Mode.EXCLUDE)
+    void testUserCanNotDeleteAccountWhenNotSystemAdmin(Roles role) {
+        setupWithAuth();
+        adminUser.setRoles(role);
+        when(accountService.getUserById(ADMIN_USER_ID)).thenReturn(adminUser);
 
-            softly.assertThat(logCaptor.getErrorLogs())
-                .as(LOG_MATCHED_MESSAGE)
-                .isEmpty();
+        assertFalse(authorisationService.userCanDeleteAccount(USER_ID, ADMIN_USER_ID));
+    }
 
-            softly.assertAll();
-        }
+    @ParameterizedTest
+    @EnumSource(Roles.class)
+    void testSystemAdminUserCanDeleteAccount(Roles role) {
+        setupWithAuth();
+        adminUser.setRoles(SYSTEM_ADMIN);
+        user.setRoles(role);
+
+        when(accountService.getUserById(ADMIN_USER_ID)).thenReturn(adminUser);
+
+        assertTrue(authorisationService.userCanDeleteAccount(USER_ID, ADMIN_USER_ID));
+    }
+
+    @ParameterizedTest
+    @EnumSource(Roles.class)
+    void testUserCanNotDeleteAccountWhenNotLoggedIn(Roles role) {
+        setupWithoutAuth();
+        adminUser.setRoles(role);
+        user.setRoles(VERIFIED);
+
+        assertFalse(authorisationService.userCanDeleteAccount(USER_ID, ADMIN_USER_ID));
+    }
+
+    @Test
+    void testSystemAdminUserCanViewAuditLogs() {
+        setupWithAuth();
+        adminUser.setRoles(SYSTEM_ADMIN);
+        when(accountService.getUserById(ADMIN_USER_ID)).thenReturn(adminUser);
+
+        assertTrue(authorisationService.userCanViewAuditLogs(ADMIN_USER_ID));
+    }
+
+    @ParameterizedTest
+    @EnumSource(value = Roles.class, names = { "SYSTEM_ADMIN" }, mode = EnumSource.Mode.EXCLUDE)
+    void testUserCanNotViewAuditLogsWhenNotSystemAdmin(Roles role) {
+        setupWithAuth();
+        user.setRoles(role);
+        when(accountService.getUserById(USER_ID)).thenReturn(user);
+
+        assertFalse(authorisationService.userCanViewAuditLogs(USER_ID));
+    }
+
+    @ParameterizedTest
+    @EnumSource(Roles.class)
+    void testUserCanNotViewAuditLogsWhenNotLoggedIn(Roles role) {
+        setupWithoutAuth();
+        user.setRoles(role);
+
+        assertFalse(authorisationService.userCanViewAuditLogs(USER_ID));
+    }
+
+    @Test
+    void testSystemAdminUserCanViewAccounts() {
+        setupWithAuth();
+        adminUser.setRoles(SYSTEM_ADMIN);
+        when(accountService.getUserById(ADMIN_USER_ID)).thenReturn(adminUser);
+
+        assertTrue(authorisationService.userCanViewAccounts(ADMIN_USER_ID));
+    }
+
+    @ParameterizedTest
+    @EnumSource(value = Roles.class, names = { "SYSTEM_ADMIN" }, mode = EnumSource.Mode.EXCLUDE)
+    void testUserCanNotViewAccountsWhenNotSystemAdmin(Roles role) {
+        setupWithAuth();
+        user.setRoles(role);
+        when(accountService.getUserById(USER_ID)).thenReturn(user);
+
+        assertFalse(authorisationService.userCanViewAccounts(USER_ID));
+    }
+
+    @ParameterizedTest
+    @EnumSource(Roles.class)
+    void testUserCanNotViewAccountsWhenNotLoggedIn(Roles role) {
+        setupWithoutAuth();
+        user.setRoles(role);
+
+        assertFalse(authorisationService.userCanViewAccounts(USER_ID));
+    }
+
+    @Test
+    void testSystemAdminUserCanBulkCreateMediaAccounts() {
+        setupWithAuth();
+        adminUser.setRoles(SYSTEM_ADMIN);
+        when(accountService.getUserById(ADMIN_USER_ID)).thenReturn(adminUser);
+
+        assertTrue(authorisationService.userCanBulkCreateMediaAccounts(ADMIN_USER_ID));
+    }
+
+    @ParameterizedTest
+    @EnumSource(value = Roles.class, names = { "SYSTEM_ADMIN" }, mode = EnumSource.Mode.EXCLUDE)
+    void testUserCanNotBulkCreateMediaAccountsWhenNotSystemAdmin(Roles role) {
+        setupWithAuth();
+        user.setRoles(role);
+        when(accountService.getUserById(USER_ID)).thenReturn(user);
+
+        assertFalse(authorisationService.userCanBulkCreateMediaAccounts(USER_ID));
+    }
+
+    @ParameterizedTest
+    @EnumSource(Roles.class)
+    void testUserCanNotBulkCreateMediaAccountsWhenNotLoggedIn(Roles role) {
+        setupWithoutAuth();
+        user.setRoles(role);
+
+        assertFalse(authorisationService.userCanBulkCreateMediaAccounts(USER_ID));
+    }
+
+    @Test
+    void testAdminCtscUserCanViewMediaApplications() {
+        setupWithAuth();
+        adminUser.setRoles(INTERNAL_ADMIN_CTSC);
+        when(accountService.getUserById(ADMIN_USER_ID)).thenReturn(adminUser);
+
+        assertTrue(authorisationService.userCanViewMediaApplications(ADMIN_USER_ID));
+    }
+
+    @ParameterizedTest
+    @EnumSource(value = Roles.class, names = { "INTERNAL_ADMIN_CTSC" }, mode = EnumSource.Mode.EXCLUDE)
+    void testUserCanNotViewMediaApplicationsWhenNotAdminCtsc(Roles role) {
+        setupWithAuth();
+        user.setRoles(role);
+        when(accountService.getUserById(USER_ID)).thenReturn(user);
+
+        assertFalse(authorisationService.userCanViewMediaApplications(USER_ID));
+    }
+
+    @ParameterizedTest
+    @EnumSource(Roles.class)
+    void testUserCanNotViewMediaApplicationsWhenNotLoggedIn(Roles role) {
+        setupWithoutAuth();
+        user.setRoles(role);
+
+        assertFalse(authorisationService.userCanViewMediaApplications(USER_ID));
+    }
+
+    @Test
+    void testAdminCtscUserCanUpdateMediaApplications() {
+        setupWithAuth();
+        adminUser.setRoles(INTERNAL_ADMIN_CTSC);
+        when(accountService.getUserById(ADMIN_USER_ID)).thenReturn(adminUser);
+
+        assertTrue(authorisationService.userCanUpdateMediaApplications(ADMIN_USER_ID));
+    }
+
+    @ParameterizedTest
+    @EnumSource(value = Roles.class, names = { "INTERNAL_ADMIN_CTSC" }, mode = EnumSource.Mode.EXCLUDE)
+    void testUserCanNotUpdateMediaApplicationsWhenNotAdminCtsc(Roles role) {
+        setupWithAuth();
+        user.setRoles(role);
+        when(accountService.getUserById(USER_ID)).thenReturn(user);
+
+        assertFalse(authorisationService.userCanUpdateMediaApplications(USER_ID));
+    }
+
+    @ParameterizedTest
+    @EnumSource(Roles.class)
+    void testUserCanNotUpdateMediaApplicationsWhenNotLoggedIn(Roles role) {
+        setupWithoutAuth();
+        user.setRoles(role);
+
+        assertFalse(authorisationService.userCanUpdateMediaApplications(USER_ID));
+    }
+
+    @Test
+    void testAdminCtscUserCanCreateAzureAccount() {
+        setupWithAuth();
+        adminUser.setRoles(INTERNAL_ADMIN_CTSC);
+        when(accountService.getUserById(ADMIN_USER_ID)).thenReturn(adminUser);
+
+        assertTrue(authorisationService.userCanCreateAzureAccount(ADMIN_USER_ID));
+    }
+
+    @ParameterizedTest
+    @EnumSource(value = Roles.class, names = { "INTERNAL_ADMIN_CTSC" }, mode = EnumSource.Mode.EXCLUDE)
+    void testUserCanNotCreateAzureAccountWhenNotAdminCtsc(Roles role) {
+        setupWithAuth();
+        user.setRoles(role);
+        when(accountService.getUserById(USER_ID)).thenReturn(user);
+
+        assertFalse(authorisationService.userCanCreateAzureAccount(USER_ID));
+    }
+
+    @ParameterizedTest
+    @EnumSource(Roles.class)
+    void testUserCanNotCreateAzureAccountWhenNotLoggedIn(Roles role) {
+        setupWithoutAuth();
+        user.setRoles(role);
+
+        assertFalse(authorisationService.userCanCreateAzureAccount(USER_ID));
+    }
+
+    @ParameterizedTest
+    @MethodSource("uk.gov.hmcts.reform.pip.model.account.Roles#getAllThirdPartyRoles")
+    void testSystemAdminCanCreateThirdPartyUsers(Roles role) {
+        setupWithAuth();
+        adminUser.setRoles(SYSTEM_ADMIN);
+        user.setRoles(role);
+
+        lenient().when(userRepository.findByUserId(ADMIN_USER_ID)).thenReturn(Optional.ofNullable(adminUser));
+        lenient().when(userRepository.findByUserId(USER_ID)).thenReturn(Optional.ofNullable(user));
+
+        assertTrue(authorisationService.userCanCreateAccount(ADMIN_USER_ID, List.of(user)));
+    }
+
+    @ParameterizedTest
+    @EnumSource(value = Roles.class, names = { "SYSTEM_ADMIN" }, mode = EnumSource.Mode.EXCLUDE)
+    void testUserCanNotCreateThirdPartyUserWhenNotSystemAdmin(Roles role) {
+        setupWithAuth();
+        adminUser.setRoles(role);
+        when(userRepository.findByUserId(ADMIN_USER_ID)).thenReturn(Optional.of(adminUser));
+        user.setRoles(GENERAL_THIRD_PARTY);
+
+        assertFalse(authorisationService.userCanCreateAccount(ADMIN_USER_ID, List.of(user)));
+    }
+
+    @ParameterizedTest
+    @EnumSource(Roles.class)
+    void testUserCanNotCreateThirdPartyUserAccountWhenNotLoggedIn(Roles role) {
+        setupWithoutAuth();
+        adminUser.setRoles(role);
+        user.setRoles(GENERAL_THIRD_PARTY);
+
+        assertFalse(authorisationService.userCanCreateAccount(ADMIN_USER_ID, List.of(user)));
+    }
+
+    @Test
+    void testAdminCtscCanCreatePiAadVerifiedUser() {
+        setupWithAuth();
+        adminUser.setRoles(INTERNAL_ADMIN_CTSC);
+        when(userRepository.findByUserId(ADMIN_USER_ID)).thenReturn(Optional.of(adminUser));
+        user.setRoles(VERIFIED);
+        user.setUserProvenance(UserProvenances.PI_AAD);
+
+        assertTrue(authorisationService.userCanCreateAccount(ADMIN_USER_ID, List.of(user)));
+    }
+
+    @ParameterizedTest
+    @EnumSource(value = Roles.class, names = { "INTERNAL_ADMIN_CTSC" }, mode = EnumSource.Mode.EXCLUDE)
+    void testUserCanNotCreatePiAadVerifiedUserWhenNotAdminCtsc(Roles role) {
+        setupWithAuth();
+        adminUser.setRoles(role);
+        when(userRepository.findByUserId(ADMIN_USER_ID)).thenReturn(Optional.of(adminUser));
+        user.setRoles(VERIFIED);
+        user.setUserProvenance(UserProvenances.PI_AAD);
+
+        assertFalse(authorisationService.userCanCreateAccount(ADMIN_USER_ID, List.of(user)));
+    }
+
+    @ParameterizedTest
+    @EnumSource(Roles.class)
+    void testUserCanNotCreatePiAadVerifiedUserAccountWhenNotLoggedIn(Roles role) {
+        setupWithoutAuth();
+        adminUser.setRoles(role);
+        user.setRoles(VERIFIED);
+        user.setUserProvenance(UserProvenances.PI_AAD);
+
+        assertFalse(authorisationService.userCanCreateAccount(ADMIN_USER_ID, List.of(user)));
     }
 
     @ParameterizedTest
@@ -167,7 +430,7 @@ class AuthorisationServiceTest {
     void testSystemAdminCannotCreateAnyRoleWhenUnauthorized(Roles role) {
         setupWithoutAuth();
         user.setRoles(role);
-        adminUser.setRoles(Roles.SYSTEM_ADMIN);
+        adminUser.setRoles(SYSTEM_ADMIN);
 
         lenient().when(userRepository.findByUserId(ADMIN_USER_ID)).thenReturn(Optional.of(adminUser));
 
@@ -176,80 +439,23 @@ class AuthorisationServiceTest {
             .isFalse();
     }
 
-    @Test
-    void testSuperAdminCannotCreateThirdPartyRole() {
+    @ParameterizedTest
+    @EnumSource(value = Roles.class, names = { "VERIFIED" }, mode = EnumSource.Mode.EXCLUDE)
+    void testSystemAdminCanCreateAnyRoleExceptPiAadVerifiedUser(Roles role) {
         setupWithAuth();
-        user.setRoles(Roles.GENERAL_THIRD_PARTY);
-        adminUser.setRoles(Roles.INTERNAL_SUPER_ADMIN_CTSC);
+        adminUser.setRoles(SYSTEM_ADMIN);
+        user.setRoles(role);
 
-        when(userRepository.findByUserId(ADMIN_USER_ID)).thenReturn(Optional.of(adminUser));
+        lenient().when(userRepository.findByUserId(ADMIN_USER_ID)).thenReturn(Optional.of(adminUser));
 
-        try (LogCaptor logCaptor = LogCaptor.forClass(AuthorisationService.class)) {
-            SoftAssertions softly = new SoftAssertions();
-
-            softly.assertThat(authorisationService.userCanCreateAccount(ADMIN_USER_ID, List.of(user)))
-                .as(CANNOT_CREATE_ACCOUNT_MESSAGE)
-                .isFalse();
-
-            softly.assertThat(logCaptor.getErrorLogs())
-                .as(LOG_NOT_EMPTY_MESSAGE)
-                .hasSize(1);
-
-            softly.assertAll();
-        }
-    }
-
-    @Test
-    void testAdminCannotCreateThirdPartyRole() {
-        setupWithAuth();
-        user.setRoles(Roles.VERIFIED_THIRD_PARTY_ALL);
-        adminUser.setRoles(Roles.INTERNAL_ADMIN_CTSC);
-
-        when(userRepository.findByUserId(ADMIN_USER_ID)).thenReturn(Optional.of(adminUser));
-
-        try (LogCaptor logCaptor = LogCaptor.forClass(AuthorisationService.class)) {
-            SoftAssertions softly = new SoftAssertions();
-
-            softly.assertThat(authorisationService.userCanCreateAccount(ADMIN_USER_ID, List.of(user)))
-                .as(CANNOT_CREATE_ACCOUNT_MESSAGE)
-                .isFalse();
-
-            softly.assertThat(logCaptor.getErrorLogs())
-                .as(LOG_NOT_EMPTY_MESSAGE)
-                .hasSize(1);
-
-            softly.assertAll();
-        }
-    }
-
-    @Test
-    void testVerifiedUserCannotCreateThirdPartyRole() {
-        setupWithAuth();
-        user.setRoles(Roles.VERIFIED_THIRD_PARTY_CFT);
-        adminUser.setRoles(Roles.VERIFIED);
-
-        when(userRepository.findByUserId(ADMIN_USER_ID)).thenReturn(Optional.of(adminUser));
-
-        try (LogCaptor logCaptor = LogCaptor.forClass(AuthorisationService.class)) {
-            SoftAssertions softly = new SoftAssertions();
-
-            softly.assertThat(authorisationService.userCanCreateAccount(ADMIN_USER_ID, List.of(user)))
-                .as(CANNOT_CREATE_ACCOUNT_MESSAGE)
-                .isFalse();
-
-            softly.assertThat(logCaptor.getErrorLogs())
-                .as(LOG_NOT_EMPTY_MESSAGE)
-                .hasSize(1);
-
-            softly.assertAll();
-        }
+        assertTrue(authorisationService.userCanCreateAccount(ADMIN_USER_ID, List.of(user)));
     }
 
     @Test
     void testThirdPartyUserCannotCreateThirdPartyRole() {
         setupWithAuth();
-        user.setRoles(Roles.VERIFIED_THIRD_PARTY_PRESS);
-        adminUser.setRoles(Roles.VERIFIED_THIRD_PARTY_PRESS);
+        user.setRoles(VERIFIED_THIRD_PARTY_PRESS);
+        adminUser.setRoles(VERIFIED_THIRD_PARTY_PRESS);
 
         when(userRepository.findByUserId(ADMIN_USER_ID)).thenReturn(Optional.of(adminUser));
 
@@ -269,21 +475,17 @@ class AuthorisationServiceTest {
     }
 
     @Test
-    void testSystemAdminUserCanUpdateAndDeleteSystemAdmin() {
+    void testSystemAdminUserCanUpdateSystemAdmin() {
         setupWithAuth();
-        user.setRoles(Roles.SYSTEM_ADMIN);
+        user.setRoles(SYSTEM_ADMIN);
         user.setUserProvenance(UserProvenances.PI_AAD);
-        adminUser.setRoles(Roles.SYSTEM_ADMIN);
+        adminUser.setRoles(SYSTEM_ADMIN);
 
         when(userRepository.findByUserId(USER_ID)).thenReturn(Optional.of(user));
         when(userRepository.findByUserId(ADMIN_USER_ID)).thenReturn(Optional.of(adminUser));
 
         try (LogCaptor logCaptor = LogCaptor.forClass(AuthorisationService.class)) {
             SoftAssertions softly = new SoftAssertions();
-
-            softly.assertThat(authorisationService.userCanDeleteAccount(USER_ID, ADMIN_USER_ID))
-                .as(CAN_DELETE_ACCOUNT_MESSAGE)
-                .isTrue();
 
             softly.assertThat(authorisationService.userCanUpdateAccount(USER_ID, ADMIN_USER_ID))
                 .as(CAN_UPDATE_ACCOUNT_MESSAGE)
@@ -298,17 +500,13 @@ class AuthorisationServiceTest {
     }
 
     @Test
-    void testSystemAdminUserCannotUpdateAndDeleteSystemAdminWhenUnauthorized() {
+    void testSystemAdminUserCannotUpdateSystemAdminWhenUnauthorized() {
         setupWithoutAuth();
-        user.setRoles(Roles.SYSTEM_ADMIN);
+        user.setRoles(SYSTEM_ADMIN);
         user.setUserProvenance(UserProvenances.PI_AAD);
-        adminUser.setRoles(Roles.SYSTEM_ADMIN);
+        adminUser.setRoles(SYSTEM_ADMIN);
 
         SoftAssertions softly = new SoftAssertions();
-
-        softly.assertThat(authorisationService.userCanDeleteAccount(USER_ID, ADMIN_USER_ID))
-            .as(UNAUTHORIZED_MESSAGE)
-            .isFalse();
 
         softly.assertThat(authorisationService.userCanUpdateAccount(USER_ID, ADMIN_USER_ID))
             .as(UNAUTHORIZED_MESSAGE)
@@ -318,21 +516,17 @@ class AuthorisationServiceTest {
     }
 
     @Test
-    void testSystemAdminUserCanUpdateAndDeleteSuperAdmin() {
+    void testSystemAdminUserCanUpdateSuperAdmin() {
         setupWithAuth();
-        user.setRoles(Roles.INTERNAL_SUPER_ADMIN_LOCAL);
+        user.setRoles(INTERNAL_SUPER_ADMIN_LOCAL);
         user.setUserProvenance(UserProvenances.PI_AAD);
-        adminUser.setRoles(Roles.SYSTEM_ADMIN);
+        adminUser.setRoles(SYSTEM_ADMIN);
 
         when(userRepository.findByUserId(USER_ID)).thenReturn(Optional.of(user));
         when(userRepository.findByUserId(ADMIN_USER_ID)).thenReturn(Optional.of(adminUser));
 
         try (LogCaptor logCaptor = LogCaptor.forClass(AuthorisationService.class)) {
             SoftAssertions softly = new SoftAssertions();
-
-            softly.assertThat(authorisationService.userCanDeleteAccount(USER_ID, ADMIN_USER_ID))
-                .as(CAN_DELETE_ACCOUNT_MESSAGE)
-                .isTrue();
 
             softly.assertThat(authorisationService.userCanUpdateAccount(USER_ID, ADMIN_USER_ID))
                 .as(CAN_UPDATE_ACCOUNT_MESSAGE)
@@ -347,21 +541,17 @@ class AuthorisationServiceTest {
     }
 
     @Test
-    void testSystemAdminUserCanUpdateAndDeleteAdmin() {
+    void testSystemAdminUserCanUpdateAdmin() {
         setupWithAuth();
-        user.setRoles(Roles.INTERNAL_ADMIN_CTSC);
+        user.setRoles(INTERNAL_ADMIN_CTSC);
         user.setUserProvenance(UserProvenances.PI_AAD);
-        adminUser.setRoles(Roles.SYSTEM_ADMIN);
+        adminUser.setRoles(SYSTEM_ADMIN);
 
         when(userRepository.findByUserId(USER_ID)).thenReturn(Optional.of(user));
         when(userRepository.findByUserId(ADMIN_USER_ID)).thenReturn(Optional.of(adminUser));
 
         try (LogCaptor logCaptor = LogCaptor.forClass(AuthorisationService.class)) {
             SoftAssertions softly = new SoftAssertions();
-
-            softly.assertThat(authorisationService.userCanDeleteAccount(USER_ID, ADMIN_USER_ID))
-                .as(CAN_DELETE_ACCOUNT_MESSAGE)
-                .isTrue();
 
             softly.assertThat(authorisationService.userCanUpdateAccount(USER_ID, ADMIN_USER_ID))
                 .as(CAN_UPDATE_ACCOUNT_MESSAGE)
@@ -376,21 +566,17 @@ class AuthorisationServiceTest {
     }
 
     @Test
-    void testSystemAdminUserCanUpdateAndDeleteVerifiedAccount() {
+    void testSystemAdminUserCanUpdateVerifiedAccount() {
         setupWithAuth();
-        user.setRoles(Roles.VERIFIED);
+        user.setRoles(VERIFIED);
         user.setUserProvenance(UserProvenances.PI_AAD);
-        adminUser.setRoles(Roles.SYSTEM_ADMIN);
+        adminUser.setRoles(SYSTEM_ADMIN);
 
         when(userRepository.findByUserId(USER_ID)).thenReturn(Optional.of(user));
         when(userRepository.findByUserId(ADMIN_USER_ID)).thenReturn(Optional.of(adminUser));
 
         try (LogCaptor logCaptor = LogCaptor.forClass(AuthorisationService.class)) {
             SoftAssertions softly = new SoftAssertions();
-
-            softly.assertThat(authorisationService.userCanDeleteAccount(USER_ID, ADMIN_USER_ID))
-                .as(CAN_DELETE_ACCOUNT_MESSAGE)
-                .isTrue();
 
             softly.assertThat(authorisationService.userCanUpdateAccount(USER_ID, ADMIN_USER_ID))
                 .as(CAN_UPDATE_ACCOUNT_MESSAGE)
@@ -405,21 +591,17 @@ class AuthorisationServiceTest {
     }
 
     @Test
-    void testSystemAdminUserCanUpdateAndDeleteThirdPartyAccount() {
+    void testSystemAdminUserCanUpdateThirdPartyAccount() {
         setupWithAuth();
-        user.setRoles(Roles.VERIFIED_THIRD_PARTY_ALL);
+        user.setRoles(VERIFIED_THIRD_PARTY_ALL);
         user.setUserProvenance(UserProvenances.PI_AAD);
-        adminUser.setRoles(Roles.SYSTEM_ADMIN);
+        adminUser.setRoles(SYSTEM_ADMIN);
 
         when(userRepository.findByUserId(USER_ID)).thenReturn(Optional.of(user));
         when(userRepository.findByUserId(ADMIN_USER_ID)).thenReturn(Optional.of(adminUser));
 
         try (LogCaptor logCaptor = LogCaptor.forClass(AuthorisationService.class)) {
             SoftAssertions softly = new SoftAssertions();
-
-            softly.assertThat(authorisationService.userCanDeleteAccount(USER_ID, ADMIN_USER_ID))
-                .as(CAN_DELETE_ACCOUNT_MESSAGE)
-                .isTrue();
 
             softly.assertThat(authorisationService.userCanUpdateAccount(USER_ID, ADMIN_USER_ID))
                 .as(CAN_UPDATE_ACCOUNT_MESSAGE)
@@ -434,21 +616,17 @@ class AuthorisationServiceTest {
     }
 
     @Test
-    void testSuperAdminUserCanUpdateAndDeleteSuperAdmin() {
+    void testSuperAdminUserCanUpdateSuperAdmin() {
         setupWithAuth();
-        user.setRoles(Roles.INTERNAL_SUPER_ADMIN_CTSC);
+        user.setRoles(INTERNAL_SUPER_ADMIN_CTSC);
         user.setUserProvenance(UserProvenances.PI_AAD);
-        adminUser.setRoles(Roles.INTERNAL_SUPER_ADMIN_LOCAL);
+        adminUser.setRoles(INTERNAL_SUPER_ADMIN_LOCAL);
 
         when(userRepository.findByUserId(USER_ID)).thenReturn(Optional.of(user));
         when(userRepository.findByUserId(ADMIN_USER_ID)).thenReturn(Optional.of(adminUser));
 
         try (LogCaptor logCaptor = LogCaptor.forClass(AuthorisationService.class)) {
             SoftAssertions softly = new SoftAssertions();
-
-            softly.assertThat(authorisationService.userCanDeleteAccount(USER_ID, ADMIN_USER_ID))
-                .as(CAN_DELETE_ACCOUNT_MESSAGE)
-                .isTrue();
 
             softly.assertThat(authorisationService.userCanUpdateAccount(USER_ID, ADMIN_USER_ID))
                 .as(CAN_UPDATE_ACCOUNT_MESSAGE)
@@ -463,21 +641,17 @@ class AuthorisationServiceTest {
     }
 
     @Test
-    void testSuperAdminUserCanUpdateAndDeleteAdmin() {
+    void testSuperAdminUserCanUpdateAdmin() {
         setupWithAuth();
-        user.setRoles(Roles.INTERNAL_ADMIN_LOCAL);
+        user.setRoles(INTERNAL_ADMIN_LOCAL);
         user.setUserProvenance(UserProvenances.PI_AAD);
-        adminUser.setRoles(Roles.INTERNAL_SUPER_ADMIN_LOCAL);
+        adminUser.setRoles(INTERNAL_SUPER_ADMIN_LOCAL);
 
         when(userRepository.findByUserId(USER_ID)).thenReturn(Optional.of(user));
         when(userRepository.findByUserId(ADMIN_USER_ID)).thenReturn(Optional.of(adminUser));
 
         try (LogCaptor logCaptor = LogCaptor.forClass(AuthorisationService.class)) {
             SoftAssertions softly = new SoftAssertions();
-
-            softly.assertThat(authorisationService.userCanDeleteAccount(USER_ID, ADMIN_USER_ID))
-                .as(CAN_DELETE_ACCOUNT_MESSAGE)
-                .isTrue();
 
             softly.assertThat(authorisationService.userCanUpdateAccount(USER_ID, ADMIN_USER_ID))
                 .as(CAN_UPDATE_ACCOUNT_MESSAGE)
@@ -494,9 +668,9 @@ class AuthorisationServiceTest {
     @Test
     void testSuperAdminUserCannotUpdateAndDeleteSystemAdmin() {
         setupWithAuth();
-        user.setRoles(Roles.SYSTEM_ADMIN);
+        user.setRoles(SYSTEM_ADMIN);
         user.setUserProvenance(UserProvenances.PI_AAD);
-        adminUser.setRoles(Roles.INTERNAL_SUPER_ADMIN_LOCAL);
+        adminUser.setRoles(INTERNAL_SUPER_ADMIN_LOCAL);
 
         when(userRepository.findByUserId(USER_ID)).thenReturn(Optional.of(user));
         when(userRepository.findByUserId(ADMIN_USER_ID)).thenReturn(Optional.of(adminUser));
@@ -518,7 +692,7 @@ class AuthorisationServiceTest {
 
             softly.assertThat(logCaptor.getErrorLogs().get(0))
                 .as(LOG_MATCHED_MESSAGE)
-                .contains(String.format(DELETE_ERROR_LOG, ADMIN_USER_ID, USER_ID));
+                .contains(String.format(DELETE_ERROR_LOG, ADMIN_USER_ID));
 
             softly.assertThat(logCaptor.getErrorLogs().get(1))
                 .as(LOG_MATCHED_MESSAGE)
@@ -531,9 +705,9 @@ class AuthorisationServiceTest {
     @Test
     void testSuperAdminUserCannotUpdateAndDeleteVerifiedAccount() {
         setupWithAuth();
-        user.setRoles(Roles.VERIFIED);
+        user.setRoles(VERIFIED);
         user.setUserProvenance(UserProvenances.PI_AAD);
-        adminUser.setRoles(Roles.INTERNAL_SUPER_ADMIN_LOCAL);
+        adminUser.setRoles(INTERNAL_SUPER_ADMIN_LOCAL);
 
         when(userRepository.findByUserId(USER_ID)).thenReturn(Optional.of(user));
         when(userRepository.findByUserId(ADMIN_USER_ID)).thenReturn(Optional.of(adminUser));
@@ -555,7 +729,7 @@ class AuthorisationServiceTest {
 
             softly.assertThat(logCaptor.getErrorLogs().get(0))
                 .as(LOG_MATCHED_MESSAGE)
-                .contains(String.format(DELETE_ERROR_LOG, ADMIN_USER_ID, USER_ID));
+                .contains(String.format(DELETE_ERROR_LOG, ADMIN_USER_ID));
 
             softly.assertThat(logCaptor.getErrorLogs().get(1))
                 .as(LOG_MATCHED_MESSAGE)
@@ -568,9 +742,9 @@ class AuthorisationServiceTest {
     @Test
     void testSuperAdminUserCannotUpdateAndDeleteThirdPartyAccount() {
         setupWithAuth();
-        user.setRoles(Roles.GENERAL_THIRD_PARTY);
+        user.setRoles(GENERAL_THIRD_PARTY);
         user.setUserProvenance(UserProvenances.PI_AAD);
-        adminUser.setRoles(Roles.INTERNAL_SUPER_ADMIN_LOCAL);
+        adminUser.setRoles(INTERNAL_SUPER_ADMIN_LOCAL);
 
         when(userRepository.findByUserId(USER_ID)).thenReturn(Optional.of(user));
         when(userRepository.findByUserId(ADMIN_USER_ID)).thenReturn(Optional.of(adminUser));
@@ -592,7 +766,7 @@ class AuthorisationServiceTest {
 
             softly.assertThat(logCaptor.getErrorLogs().get(0))
                 .as(LOG_MATCHED_MESSAGE)
-                .contains(String.format(DELETE_ERROR_LOG, ADMIN_USER_ID, USER_ID));
+                .contains(String.format(DELETE_ERROR_LOG, ADMIN_USER_ID));
 
             softly.assertThat(logCaptor.getErrorLogs().get(1))
                 .as(LOG_MATCHED_MESSAGE)
@@ -605,9 +779,9 @@ class AuthorisationServiceTest {
     @Test
     void testAdminUserCannotUpdateAndDeleteAccount() {
         setupWithAuth();
-        user.setRoles(Roles.INTERNAL_ADMIN_LOCAL);
+        user.setRoles(INTERNAL_ADMIN_LOCAL);
         user.setUserProvenance(UserProvenances.PI_AAD);
-        adminUser.setRoles(Roles.INTERNAL_ADMIN_LOCAL);
+        adminUser.setRoles(INTERNAL_ADMIN_LOCAL);
 
         when(userRepository.findByUserId(USER_ID)).thenReturn(Optional.of(user));
         when(userRepository.findByUserId(ADMIN_USER_ID)).thenReturn(Optional.of(adminUser));
@@ -629,7 +803,7 @@ class AuthorisationServiceTest {
 
             softly.assertThat(logCaptor.getErrorLogs().get(0))
                 .as(LOG_MATCHED_MESSAGE)
-                .contains(String.format(DELETE_ERROR_LOG, ADMIN_USER_ID, USER_ID));
+                .contains(String.format(DELETE_ERROR_LOG, ADMIN_USER_ID));
 
             softly.assertThat(logCaptor.getErrorLogs().get(1))
                 .as(LOG_MATCHED_MESSAGE)
@@ -642,9 +816,9 @@ class AuthorisationServiceTest {
     @Test
     void testVerifiedUserCannotUpdateAndDeleteAccount() {
         setupWithAuth();
-        user.setRoles(Roles.INTERNAL_ADMIN_LOCAL);
+        user.setRoles(INTERNAL_ADMIN_LOCAL);
         user.setUserProvenance(UserProvenances.PI_AAD);
-        adminUser.setRoles(Roles.VERIFIED);
+        adminUser.setRoles(VERIFIED);
 
         when(userRepository.findByUserId(USER_ID)).thenReturn(Optional.of(user));
         when(userRepository.findByUserId(ADMIN_USER_ID)).thenReturn(Optional.of(adminUser));
@@ -666,7 +840,7 @@ class AuthorisationServiceTest {
 
             softly.assertThat(logCaptor.getErrorLogs().get(0))
                 .as(LOG_MATCHED_MESSAGE)
-                .contains(String.format(DELETE_ERROR_LOG, ADMIN_USER_ID, USER_ID));
+                .contains(String.format(DELETE_ERROR_LOG, ADMIN_USER_ID));
 
             softly.assertThat(logCaptor.getErrorLogs().get(1))
                 .as(LOG_MATCHED_MESSAGE)
@@ -679,9 +853,9 @@ class AuthorisationServiceTest {
     @Test
     void testThirdPartyUserCannotUpdateAndDeleteAccount() {
         setupWithAuth();
-        user.setRoles(Roles.INTERNAL_ADMIN_LOCAL);
+        user.setRoles(INTERNAL_ADMIN_LOCAL);
         user.setUserProvenance(UserProvenances.PI_AAD);
-        adminUser.setRoles(Roles.GENERAL_THIRD_PARTY);
+        adminUser.setRoles(GENERAL_THIRD_PARTY);
 
         when(userRepository.findByUserId(USER_ID)).thenReturn(Optional.of(user));
         when(userRepository.findByUserId(ADMIN_USER_ID)).thenReturn(Optional.of(adminUser));
@@ -703,7 +877,7 @@ class AuthorisationServiceTest {
 
             softly.assertThat(logCaptor.getErrorLogs().get(0))
                 .as(LOG_MATCHED_MESSAGE)
-                .contains(String.format(DELETE_ERROR_LOG, ADMIN_USER_ID, USER_ID));
+                .contains(String.format(DELETE_ERROR_LOG, ADMIN_USER_ID));
 
             softly.assertThat(logCaptor.getErrorLogs().get(1))
                 .as(LOG_MATCHED_MESSAGE)
@@ -716,15 +890,17 @@ class AuthorisationServiceTest {
     @Test
     void testSsoUserCanBeUpdatedAndDeleted() {
         setupWithAuth();
-        user.setRoles(Roles.INTERNAL_ADMIN_LOCAL);
+        user.setRoles(INTERNAL_ADMIN_LOCAL);
         user.setUserProvenance(UserProvenances.SSO);
+        adminUser.setRoles(SYSTEM_ADMIN);
 
         when(userRepository.findByUserId(USER_ID)).thenReturn(Optional.of(user));
+        when(accountService.getUserById(ADMIN_USER_ID)).thenReturn(adminUser);
 
         try (LogCaptor logCaptor = LogCaptor.forClass(AuthorisationService.class)) {
             SoftAssertions softly = new SoftAssertions();
 
-            softly.assertThat(authorisationService.userCanDeleteAccount(USER_ID, null))
+            softly.assertThat(authorisationService.userCanDeleteAccount(USER_ID, ADMIN_USER_ID))
                 .as(CAN_DELETE_ACCOUNT_MESSAGE)
                 .isTrue();
 
@@ -743,12 +919,12 @@ class AuthorisationServiceTest {
     @Test
     void testUserCannotUpdateTheirOwnAccount() {
         setupWithAuth();
-        user.setRoles(Roles.INTERNAL_SUPER_ADMIN_LOCAL);
+        user.setRoles(INTERNAL_SUPER_ADMIN_LOCAL);
         user.setUserProvenance(UserProvenances.PI_AAD);
 
         PiUser adminUser = new PiUser();
         adminUser.setUserId(USER_ID);
-        adminUser.setRoles(Roles.INTERNAL_SUPER_ADMIN_LOCAL);
+        adminUser.setRoles(INTERNAL_SUPER_ADMIN_LOCAL);
 
         try (LogCaptor logCaptor = LogCaptor.forClass(AuthorisationService.class)) {
             SoftAssertions softly = new SoftAssertions();
@@ -761,7 +937,7 @@ class AuthorisationServiceTest {
                 .as(LOG_NOT_EMPTY_MESSAGE)
                 .hasSize(1);
 
-            softly.assertThat(logCaptor.getErrorLogs().get(0))
+            softly.assertThat(logCaptor.getErrorLogs().getFirst())
                 .as(LOG_MATCHED_MESSAGE)
                 .contains(String.format(UPDATE_OWN_ACCOUNT_ERROR_LOG, USER_ID));
 
@@ -801,7 +977,7 @@ class AuthorisationServiceTest {
         setupWithAuth();
         UUID userId = UUID.randomUUID();
         PiUser user = new PiUser();
-        user.setRoles(Roles.SYSTEM_ADMIN);
+        user.setRoles(SYSTEM_ADMIN);
 
         when(userRepository.findByUserId(userId)).thenReturn(Optional.of(user));
 
@@ -825,7 +1001,7 @@ class AuthorisationServiceTest {
         try (LogCaptor logCaptor = LogCaptor.forClass(AuthorisationService.class)) {
             assertThat(authorisationService.userCanCreateSystemAdmin(userId)).isFalse();
 
-            assertThat(logCaptor.getErrorLogs().get(0)).contains(
+            assertThat(logCaptor.getErrorLogs().getFirst()).contains(
                 String.format("User with ID %s is forbidden to create a B2C system admin", userId));
         }
     }
@@ -835,14 +1011,14 @@ class AuthorisationServiceTest {
         setupWithAuth();
         UUID userId = UUID.randomUUID();
         PiUser user = new PiUser();
-        user.setRoles(Roles.INTERNAL_ADMIN_LOCAL);
+        user.setRoles(INTERNAL_ADMIN_LOCAL);
 
         when(userRepository.findByUserId(userId)).thenReturn(Optional.of(user));
 
         try (LogCaptor logCaptor = LogCaptor.forClass(AuthorisationService.class)) {
             assertThat(authorisationService.userCanCreateSystemAdmin(userId)).isFalse();
 
-            assertThat(logCaptor.getErrorLogs().get(0)).contains(
+            assertThat(logCaptor.getErrorLogs().getFirst()).contains(
                 String.format("User with ID %s is forbidden to create a B2C system admin", userId));
         }
     }
@@ -850,7 +1026,7 @@ class AuthorisationServiceTest {
     @Test
     void testSystemAdminUserCanDeleteSubscription() {
         setupWithAuth();
-        user.setRoles(Roles.SYSTEM_ADMIN);
+        user.setRoles(SYSTEM_ADMIN);
         when(accountService.getUserById(USER_ID)).thenReturn(user);
 
         try (LogCaptor logCaptor = LogCaptor.forClass(AuthorisationService.class)) {
@@ -868,7 +1044,7 @@ class AuthorisationServiceTest {
     @Test
     void testSystemAdminUserCannotDeleteSubscriptionWhenUnauthorized() {
         setupWithoutAuth();
-        user.setRoles(Roles.SYSTEM_ADMIN);
+        user.setRoles(SYSTEM_ADMIN);
 
         assertThat(authorisationService.userCanDeleteSubscriptions(USER_ID, SUBSCRIPTION_ID))
             .as(UNAUTHORIZED_MESSAGE)
@@ -880,7 +1056,7 @@ class AuthorisationServiceTest {
     @Test
     void testAdminUserCannotDeleteSubscriptionIfUserMismatched() {
         setupWithAuth();
-        user.setRoles(Roles.INTERNAL_ADMIN_LOCAL);
+        user.setRoles(INTERNAL_ADMIN_LOCAL);
         subscription.setUserId(ANOTHER_USER_ID);
         when(accountService.getUserById(USER_ID)).thenReturn(user);
         when(subscriptionRepository.findById(SUBSCRIPTION_ID)).thenReturn(Optional.of(subscription));
@@ -894,7 +1070,7 @@ class AuthorisationServiceTest {
                 .as(LOG_NOT_EMPTY_MESSAGE)
                 .hasSize(1);
 
-            assertThat(logCaptor.getErrorLogs().get(0))
+            assertThat(logCaptor.getErrorLogs().getFirst())
                 .as(LOG_MATCHED_MESSAGE)
                 .contains(String.format(ERROR_LOG, USER_ID, SUBSCRIPTION_ID, ANOTHER_USER_ID));
         }
@@ -903,7 +1079,7 @@ class AuthorisationServiceTest {
     @Test
     void testVerifiedUserCannotDeleteSubscriptionIfUserMismatched() {
         setupWithAuth();
-        user.setRoles(Roles.VERIFIED);
+        user.setRoles(VERIFIED);
         subscription.setUserId(ANOTHER_USER_ID);
         when(accountService.getUserById(USER_ID)).thenReturn(user);
         when(subscriptionRepository.findById(SUBSCRIPTION_ID)).thenReturn(Optional.of(subscription));
@@ -917,7 +1093,7 @@ class AuthorisationServiceTest {
                 .as(LOG_NOT_EMPTY_MESSAGE)
                 .hasSize(1);
 
-            assertThat(logCaptor.getErrorLogs().get(0))
+            assertThat(logCaptor.getErrorLogs().getFirst())
                 .as(LOG_MATCHED_MESSAGE)
                 .contains(String.format(ERROR_LOG, USER_ID, SUBSCRIPTION_ID, ANOTHER_USER_ID));
         }
@@ -926,7 +1102,7 @@ class AuthorisationServiceTest {
     @Test
     void testUserCanDeleteSubscriptionIfUserMatchedInSingleSubscription() {
         setupWithAuth();
-        user.setRoles(Roles.INTERNAL_ADMIN_LOCAL);
+        user.setRoles(INTERNAL_ADMIN_LOCAL);
         subscription.setUserId(USER_ID);
         when(accountService.getUserById(USER_ID)).thenReturn(user);
         when(subscriptionRepository.findById(SUBSCRIPTION_ID)).thenReturn(Optional.of(subscription));
@@ -945,7 +1121,7 @@ class AuthorisationServiceTest {
     @Test
     void testUserCanDeleteSubscriptionIfUserMatchedInAllSubscriptions() {
         setupWithAuth();
-        user.setRoles(Roles.INTERNAL_ADMIN_LOCAL);
+        user.setRoles(INTERNAL_ADMIN_LOCAL);
         subscription.setUserId(USER_ID);
         subscription2.setUserId(USER_ID);
         subscription3.setUserId(USER_ID);
@@ -970,7 +1146,7 @@ class AuthorisationServiceTest {
     @Test
     void testUserCannotDeleteSubscriptionIfUserMisMatchedInSomeOfTheSubscriptions() {
         setupWithAuth();
-        user.setRoles(Roles.INTERNAL_ADMIN_LOCAL);
+        user.setRoles(INTERNAL_ADMIN_LOCAL);
         subscription.setUserId(USER_ID);
         subscription2.setUserId(ANOTHER_USER_ID);
         subscription3.setUserId(USER_ID);
@@ -990,7 +1166,7 @@ class AuthorisationServiceTest {
                 .as(LOG_NOT_EMPTY_MESSAGE)
                 .hasSize(1);
 
-            assertThat(logCaptor.getErrorLogs().get(0))
+            assertThat(logCaptor.getErrorLogs().getFirst())
                 .as(LOG_MATCHED_MESSAGE)
                 .contains(String.format(ERROR_LOG, USER_ID, SUBSCRIPTION_ID2, ANOTHER_USER_ID));
 
@@ -1001,7 +1177,7 @@ class AuthorisationServiceTest {
     @Test
     void testUserCanDeleteSubscriptionReturnsTrueIfSubscriptionNotFound() {
         setupWithAuth();
-        user.setRoles(Roles.INTERNAL_ADMIN_LOCAL);
+        user.setRoles(INTERNAL_ADMIN_LOCAL);
         when(accountService.getUserById(USER_ID)).thenReturn(user);
         when(subscriptionRepository.findById(SUBSCRIPTION_ID)).thenReturn(Optional.empty());
 
